# rdra-analyzer

./: .env.example  .gitignore  README.md  confidence.py  config.py  main.py  pyproject.toml  requirements.txt
analyzer/: __init__.py  conflict_report.py  project_context.py  reconcile.py  rejection_log.py  scenario_builder.py  scenario_verifier.py  screen_analyzer.py  source_parser.py  usecase_extractor.py  view_model.py
context/: __init__.py  project_context.py
e2e/: __init__.py  agent_loop.py  playwright_runner.py  scenario_executor.py  test_generator.py
extraction/: __init__.py  rejection_log.py  screen_analyzer.py  source_parser.py  usecase_extractor.py
gap/: __init__.py  crud_analyzer.py
knowledge/: actix.md  django.md  echo.md  express.md  fastapi.md  flutter.md  gin.md  laravel.md  loader.py  nextjs.md  nuxt.md  phoenix.md  rails.md  spring_boot.md
llm/: __init__.py  anthropic_provider.py  claude_code_provider.py  provider.py
rdra/: __init__.py  activity_diagram.py  business_policy.py  crud_matrix.py  information_model.py  mermaid_renderer.py  requirements_generator.py  state_transition.py  system_boundary.py  usecase_diagram.py  viewer_template.py
reconciliation/: __init__.py  reconcile.py
shared/: __init__.py  scenario_builder.py
tests/: test_analyze_parallel.py  test_attach_operations.py  test_confidence.py  test_conflict_report.py  test_crud_analyzer_entity_ops.py  test_crud_matrix.py  test_entity_operation_parsing.py  test_reconcile.py  test_rejection_log.py  test_requirements_generator.py  test_rescue.py  test_screen_flow.py  (+8 more)
(+58 files in other folders)
