[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "rdra-analyzer"
version = "0.1.0"
description = "RDRA分析ツール - 言語・フレームワーク非依存のユースケース・RDRA・CRUDギャップ・E2E分析"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "anthropic>=0.40.0",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "playwright>=1.49.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=24.0.0",
    "tenacity>=9.0.0",
]

[project.scripts]
rdra = "main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["rdra_analyzer*", "llm*", "analyzer*", "rdra*", "gap*", "e2e*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
